--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
@@ -73,53 +73,225 @@
 % puts("Hola mundo!");
 % }
 % \end{verbatim}
+\usepackage{hyphenat}
 
+\newenvironment{changemargin}[2]{%
+	\begin{list}{}{%
+			\setlength{\topsep}{0pt}%
+			\setlength{\leftmargin}{#1}%
+			\setlength{\rightmargin}{#2}%
+			\setlength{\listparindent}{\parindent}%
+			\setlength{\itemindent}{\parindent}%
+			\setlength{\parsep}{\parskip}%
+		}%
+		\item[]}{\end{list}}
+
+\newenvironment{nota}{
+	\begin{changemargin}{2em}{2em}
+		\textbf{\textsc{Nota: }}
+	}{
+	\end{changemargin}
+}
 
 
 %%Configuracion del paquete listings
 \lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1}
 
 \begin{document}
-	\begin{titlepage}
-		\centering
-		
-		{\scshape\huge University of Cádiz \par}
-		\vspace{1cm}
-		{\scshape\LARGE Faculty of Engeneering\par}
-		\vspace{1cm}
-		{\scshape\Large{Stimey}\par}
-		\vspace{1cm}
-		{\Huge\bfseries Fantasy\par}
-		\vspace{1cm}
-		{\Large\itshape Luis Gutiérrez Flores\\
-			Nicolás Ruiz Requejo\\
-			Jesús Rodríguez Heras\\
-			Arantzazu Otal Alberro\\
-			Alejandro Segovia Gallardo\\
-			Alejandro José Caraballo García\\
-			Gabriel Fernando Sánchez Reina\par}
-		\vspace{2.5cm}
-		\begin{table}[htb]
-			\centering
-			\begin{tabular}{ccc}
-				\includegraphics[width=0.15\textwidth]{UCA.png}\par\vspace{1.2cm} & \includegraphics[width=0.15\textwidth]{ESI.png}\par\vspace{1.2cm} & \includegraphics[width=0.15\textwidth]{Stimey.png}\par\vspace{1.2cm}
-			\end{tabular}
-		\end{table}
+%	\begin{titlepage}
+%		\centering
+%		
+%		{\scshape\huge University of Cádiz \par}
+%		\vspace{1cm}
+%		{\scshape\LARGE Faculty of Engeneering\par}
+%		\vspace{1cm}
+%		{\scshape\Large{Stimey}\par}
+%		\vspace{1cm}
+%		{\Huge\bfseries Fantasy\par}
+%		\vspace{1cm}
+%		{\Large\itshape Luis Gutiérrez Flores\\
+%			Nicolás Ruiz Requejo\\
+%			Jesús Rodríguez Heras\\
+%			Arantzazu Otal Alberro\\
+%			Alejandro Segovia Gallardo\\
+%			Alejandro José Caraballo García\\
+%			Gabriel Fernando Sánchez Reina\par}
+%		\vspace{2.5cm}
+%		\begin{table}[htb]
+%			\centering
+%			\begin{tabular}{ccc}
+%				\includegraphics[width=0.15\textwidth]{UCA.png}\par\vspace{1.2cm} & \includegraphics[width=0.15\textwidth]{ESI.png}\par\vspace{1.2cm} & \includegraphics[width=0.15\textwidth]{Stimey.png}\par\vspace{1.2cm}
+%			\end{tabular}
+%		\end{table}
 		%		\vfill
 		
 		
 		
 		% Bottom of the page
 		%		{\large \today\par}
-	\end{titlepage}
+%	\end{titlepage}
+
+
+\begin{titlepage}
+\centering
+%	\includegraphics[width=.1\textwidth]{UCA.png}
+
+\begin{table}[htb]
+	\centering
+	\begin{tabular}{ccc}
+		\includegraphics[width=0.15\textwidth]{UCA.png}\par\vspace{0.2cm} & \includegraphics[width=0.15\textwidth]{ESI.png}\par\vspace{0.2cm} & \includegraphics[width=0.15\textwidth]{Stimey.png}\par\vspace{0.2cm}
+	\end{tabular}
+\end{table}
+
+%	\bigskip
+%	\bigskip
+%	\bigskip
+
+\begin{changemargin}{3em}{3em}
+	\centering
+	
+	{\LARGE \textsc{\nohyphens{Faculty of Engeneering}}}
+	
+	\bigskip
+	\bigskip
+	\bigskip
+	\bigskip
+	
+	{\LARGE \nohyphens{Degree in Computer Engineering}}
+	
+	\bigskip
+	\bigskip
+	%		\bigskip
+	\bigskip
+	\bigskip
+	\bigskip
+	
+	{\LARGE \nohyphens{\textbf{Fantasy}}}
+	
+	\bigskip
+	\bigskip
+	%		\bigskip
+	\bigskip
+	\bigskip
+	
+	{\large Course 2018-2019}
+	
+	\bigskip
+	\bigskip
+	%		\bigskip
+	%		\bigskip
+	\bigskip
+	\bigskip
+	
+\end{changemargin}
+
+{\Large Luis Gutiérrez Flores\\
+	Nicolás Ruiz Requejo\\
+	Jesús Rodríguez Heras\\
+	Arantzazu Otal Alberro\\
+	Alejandro Segovia Gallardo\\
+	Alejandro José Caraballo García\\
+	Gabriel Fernando Sánchez Reina} \\
+\bigskip
+\bigskip 
+\bigskip 
+{\large Puerto Real, \today}
+
+\end{titlepage}
+\newpage{\pagestyle{empty}\cleardoublepage}  
+{
+\thispagestyle{empty} 
+\centering
+%	\includegraphics[width=.1\textwidth]{UCA.png}
+\begin{table}[htb]
+	\centering
+	\begin{tabular}{ccc}
+		\includegraphics[width=0.15\textwidth]{UCA.png}\par\vspace{0.2cm} & \includegraphics[width=0.15\textwidth]{ESI.png}\par\vspace{0.2cm} & \includegraphics[width=0.15\textwidth]{Stimey.png}\par\vspace{0.2cm}
+	\end{tabular}
+\end{table}
+
+%	\bigskip
+%	\bigskip
+%	\bigskip
+
+\begin{changemargin}{3em}{3em}
+	
+	\begin{center}
+		{\LARGE \textsc{\nohyphens{Faculty of Engeneering}}}
+		
+		\bigskip
+		\bigskip
+		
+		{\LARGE \nohyphens{Degree in Computer Engineering}}
+		
+		\bigskip
+		\bigskip
+		\bigskip
+		\bigskip
+		
+		{\LARGE \nohyphens{\textbf{Fantasy}}}
+		
+		\bigskip
+		\bigskip
+		\bigskip
+		\bigskip
+		
+	\end{center}
+\end{changemargin}
+
+\begin{flushleft}
+	\Large
+	
+	\textsc{Department}: \nohyphens{Computer Engineering.} \\
+	\textsc{Proyect director}: \nohyphens{Alicia Ale.} \\
+	\textsc{Project author}: \nohyphens{Team Fantasy}. \\
+\end{flushleft}
+
+\bigskip
+\bigskip
+\bigskip
+
+\begin{flushright}
+	\large
+	Puerto Real, \today
+	
+	\bigskip    
+	\bigskip
+	\bigskip
+	\bigskip
+	\bigskip
+	\bigskip
+	\bigskip
+	\bigskip
+	Signed: Team Fantasy
+	
+\end{flushright}
+
+}
+
+%	\thispagestyle{empty}
+\newpage
+
+\include{Summary}
+
 
 	\tableofcontents
 	\newpage
 	
-	\include{Introduction}
-	\include{ProyectPlan}
-	\include{RequirementsAnalisys}
-	\include{UseCase}
+	\part{Prolegomenon}
+	\include{Prolegomenon/Introduction}
+	\include{Prolegomenon/ProyectPlan}
+	
+	\part{Developing}
+	\include{Developing/RequirementsAnalisys}
+	\include{Developing/UseCase}
+	\include{Developing/Implementation}
+	\include{Developing/Tests}
+	
+	\part{Epilogue}
+	\include{Epilogue/UserManual}
+	\include{Epilogue/InstalationOperationManual}
+	\include{Epilogue/Conclusions}
 	
 	
 \end{document}
