Arreglados los .tex para que me acepten los acentos cuando incluyo ficheros de código

--- a/3 GII/Colaboracion/Informe/Informe.tex
+++ b/3 GII/Colaboracion/Informe/Informe.tex
@@ -65,7 +65,7 @@
 \usepackage[spanish]{babel}
 %\usepackage{Estilos/Apuntes}
 \usepackage[svgnames,x11names,table]{xcolor}
-\usepackage{listings}
+\usepackage{listingsutf8}
 % Para escribir código en C
 % \begin{verbatim}[language=C]
 % #include <stdio.h>
@@ -76,10 +76,10 @@
 
 \title{Informe anual de actividad}
 \author{Jesús Rodríguez Heras}
-\date{Alumnos colaboradores de: \textbf{Mercedes Rodríguez García}}
+\date{Alumno colaborador de: \textbf{Mercedes Rodríguez García}}
 
 %%Configuracion del paquete listings
-\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1}
+\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=utf8/latin1, breaklines=true}
 
 \begin{document}
 	\maketitle
