--- a/4 GII/2do Semestre/PINF/Fantasy/Casos de uso/Casos de uso.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Casos de uso/Casos de uso.tex
@@ -63,7 +63,7 @@
 %% Indenteacion en español...
 \usepackage[spanish]{babel}
 
-\usepackage{listings}
+\usepackage{listingsutf8}
 % Para escribir código en C
 % \begin{lstlisting}[language=C]
 % #include <stdio.h>
@@ -106,7 +106,7 @@
 	%%%% REAL WORK BEGINS HERE:
 	
 	%%Configuracion del paquete listings
-	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
+	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=utf8/latin1, breaklines=true}
 
 \noindent
 Todos los casos de uso descritos a continuación, tienen la siguiente precondición implícita para poder usar dichos casos de uso en la aplicación final:
