--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Fantasy.tex
@@ -65,7 +65,7 @@
 \usepackage[spanish,USenglish]{babel}
 \usepackage{Estilos/Apuntes}
 \usepackage[svgnames,x11names,table]{xcolor}
-\usepackage{listings}
+\usepackage{listingsutf8}
 % Para escribir código en C
 % \begin{verbatim}[language=C]
 % #include <stdio.h>
@@ -95,7 +95,7 @@
 
 
 %%Configuracion del paquete listings
-\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1}
+\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=utf8/latin1, breaklines=true}
 
 \begin{document}
 %	\begin{titlepage}
