--- a/4 GII/2do Semestre/PINF/Fantasy/Documento de plan de proyecto/Documento de plan de proyecto.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documento de plan de proyecto/Documento de plan de proyecto.tex
@@ -63,7 +63,7 @@
 %% Indenteacion en español...
 \usepackage[spanish]{babel}
 
-\usepackage{listings}
+\usepackage{listingsutf8}
 % Para escribir código en C
 % \begin{lstlisting}[language=C]
 % #include <stdio.h>
@@ -106,7 +106,7 @@
 	%%%% REAL WORK BEGINS HERE:
 	
 	%%Configuracion del paquete listings
-	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
+	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=utf8/latin1, breaklines=true}
 
 \section{Visión general}
 Este documento recoge la planificación, el planteamiento y el principio de un proyecto al que hemos denominado ``\textbf{Fantasy}'', un portal web en el que los profesores pueden realizar una serie de tareas (fantasías) con el objetivo de que los alumnos puedan jugarlas y así aprendan de forma creativa.
