--- a/4 GII/2do Semestre/PINF/Prácticas/ProjectLibre/Documento entregable/Rodríguez_Heras_Jesús.tex
+++ b/4 GII/2do Semestre/PINF/Prácticas/ProjectLibre/Documento entregable/Rodríguez_Heras_Jesús.tex
@@ -63,7 +63,7 @@
 %% Indenteacion en español...
 \usepackage[spanish]{babel}
 
-\usepackage{listings}
+\usepackage{listingsutf8}
 % Para escribir código en C
 % \begin{lstlisting}[language=C]
 % #include <stdio.h>
@@ -101,7 +101,7 @@
 	%%%% REAL WORK BEGINS HERE:
 	
 	%%Configuracion del paquete listings
-	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
+	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=utf8/latin1, breaklines=true}
 
 \section{Decisión}
 Tras un breve estudio de todas las herramientas propuestas, y trabajar con algunos ejemplos hemos elegido \textbf{ProjectLibre} como la herramienta de gestión de nuestro proyecto.
